Z-Index fix on dropdown

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ img {
 .drop_down, .districts {
     position: absolute;
     display:none;
-
+    z-index: 999;
 }
 
 .location_menu {
